Learning - .Net core web api with mongo db

--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "StudentStoreDatabseSettings": {
+    "StudentCoursesCollectionName": "test-collection",
+    "ConnectionString": "mongodb+srv://jagadeeshkushalappa:Jag9731406737@cluster0.ngkvti1.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "test-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
